tooling/nargo_cli/tests/snapshots/execution_success/regression_9593/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
 - Dead witnesses in program inputs:
  - a (witness w0)
warning: Dead witnesses {w3,..,w13}
  ┌─ /Users/asterite/Projects/noir/test_programs/execution_success/regression_9593/src/main.nr:8:9
  │
8 │         b.pop_front()
  │         -----------
  │

warning: Dead witnesses {w14,..,w15}
   ┌─ /Users/asterite/Projects/noir/test_programs/execution_success/regression_9593/src/main.nr:10:7
   │
10 │     d[1]
   │       -
   │

Dead witnesses found in circuit
