tooling/nargo_cli/tests/snapshots/execution_success/regression_9593/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool) -> pub str<2> {
    let (_, d): (str<2>, [str<2>]) = {
        let b: [str<2>] = if a {
            ["Aa", "Bb", "Cc"].as_vector()
        } else {
            ["Dd", "Ee"].as_vector()
        };
        b.pop_front()
    };
    d[1_u32]
}
